--- a/Stat-184-Final-Project.qmd
+++ b/Stat-184-Final-Project.qmd
@@ -161,8 +161,10 @@ conversion_rate <- 0.012  # ₹1 = $0.012
 
 df_usd <- df_unique %>%
   mutate(
-    discounted_price_USD = as.numeric(gsub(",","",gsub("₹", "", discounted_price)))*conversion_rate,
-    actual_price_USD = as.numeric(gsub(",","",gsub("₹", "", actual_price)))*conversion_rate
+    discounted_price_USD = as.numeric(
+        gsub(",","",gsub("₹", "", discounted_price)))*conversion_rate,
+    actual_price_USD = as.numeric(
+        gsub(",","",gsub("₹", "", actual_price)))*conversion_rate
     
   )
 View(df_usd)
@@ -171,7 +173,8 @@ df_tidy <- df_usd %>%
   mutate(
     rating_count = as.numeric(gsub(",", "", rating_count)),
   ) %>%
-  select(product_name, category, discounted_price_USD, actual_price_USD, rating, rating_count, user_id) %>%
+  select(product_name, category, discounted_price_USD, 
+         actual_price_USD, rating, rating_count, user_id) %>%
   separate_rows(user_id, sep = ",")
 
 View(df_tidy)
@@ -228,7 +231,8 @@ kable(df_summary, caption = "Average Rating and Total Reviews by Main Category")
 #| label: fig-average-rating
 #| fig-cap: "Average Rating by Main Category"
 
-ggplot(df_summary, aes(x = reorder(main_category, -avg_rating), y = avg_rating, fill = main_category)) +
+ggplot(df_summary, aes(x = reorder(main_category, -avg_rating), 
+       y = avg_rating, fill = main_category)) +
   geom_bar(stat = "identity", color = "black", width = 0.7, show.legend = FALSE) +
   scale_fill_brewer(palette = "Set3") +
   labs(
