--- a/Stat-184-Final-Project.qmd
+++ b/Stat-184-Final-Project.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Amazon India Sales Analysis"
 author: "Soren Epple, Lucas Sadoulet, Tjoet Lakmana"
-date: "2025-05-07"
+date: "2025-05-01"
 format:
   pdf:
     toc: false
@@ -31,6 +31,10 @@ Here are the main questions we set out to explore:
 -   What products tend to have a higher rating with respect to their main category?
 
     This helps us understand which products are actively being bought and reviewed. It can also be helpful to make interpretations with respect to review count, and how depending on the number can affect the confidence in the product rating. High volumes in review count generally show a higher confidence in the rating, whereas, lower volumes have a lesser amount of confidence.
+    
+-   Is review count a reliable datapoint?
+
+-   How can we use average ratings to make interpretations off other variables?
 
 **Tjoet's Exploratory Questions?**
 
@@ -164,7 +168,6 @@ For this project, we are looking to conduct exploratory analysis, since while lo
 This structure allows us to analyze product pricing, discount trends, rating patterns, and customer engagement at both the product and category levels. By simplifying and standardizing the dataset, we made it easier to create visualizations, perform summaries, and answer the key questions guiding our analysis.
 
 ### PCIP:
-
 
 We wanted to change the currency, simple text replacement and rupee to usd conversion. We wanted to remove duplicate data and ensure the data was clean. Priorities necessary columns and removing excess columns such as image links and image files.
 ```{r}
@@ -406,7 +409,6 @@ To clearly visualize how users spending habits can be generalized, using the amo
 
 To create the Actual Price vs Discounted Price scatter plot, I first planned the goal of the visualization: to show how much products are discounted across categories and whether certain categories consistently offer larger discounts. Then I coded the plot by cleaning the data, creating a simplified main category variable, and using ggplot() to map actual price against discounted price, adding a dashed line to represent no discount. After generating the initial plot, I polished it by setting axis limits, adjusting the colors, and rotating the labels to make it easier to read. 
 
-
 For this code section I’ll need to create a new table for individuals users. To do this I split the users list by commas and the group these rows by their names. This grouping would include key detail including the total amount spend and the number of items bought. Then creating a table which merges these two concepts, probably a dot plot in 2D.
 ```{r}
 #| label: fig-user-spending
@@ -433,16 +435,11 @@ ggplot(df_individuals, aes(x = item_count, y = average_price)) +
   labs(
     title = "Average Cost per Item vs. Number of Items Bought",
     x = "Number of Items Bought",
-    y = "Average Cost per Item (USD)",
+    y = "Average Cost per Item",
     color = "Total Spending",
     size = "Total Spending"
   ) +
   theme_minimal()
-```
-```{r}
-#| label: fig-user-spending-outliers-removed
-#| fig-cap: "Total Spending and Number of Items Bought by Users ( Outlier Removed )"
-#| fig-pos: H
 
 # Step 3: Remove Outliers, users with ~600 and ~50 items offsetting all data points, removed for ease of understanding 
 df_individuals <- df_individuals %>%
@@ -454,9 +451,9 @@ df_individuals <- df_individuals %>%
 ggplot(df_individuals, aes(x = item_count, y = average_price)) +
   geom_point(aes(size = total_spending, color = total_spending)) +
   labs(
-    title = "Average Cost per Item vs. Number of Items Bought ( Outlier Removed )",
+    title = "Average Cost per Item vs. Number of Items Bought",
     x = "Number of Items Bought",
-    y = "Average Cost per Item (USD)",
+    y = "Average Cost per Item",
     color = "Total Spending",
     size = "Total Spending"
   ) +
