--- a/Stat-184-Final-Project.qmd
+++ b/Stat-184-Final-Project.qmd
@@ -411,7 +411,7 @@ To create the Actual Price vs Discounted Price scatter plot, I first planned the
 
 For this code section I’ll need to create a new table for individuals users. To do this I split the users list by commas and the group these rows by their names. This grouping would include key detail including the total amount spend and the number of items bought. Then creating a table which merges these two concepts, probably a dot plot in 2D.
 ```{r}
-#| label: fig-user-spending
+#| label: fig-user-spending-outliers
 #| fig-cap: "Total Spending and Number of Items Bought by Users"
 #| fig-pos: H
 
@@ -440,6 +440,13 @@ ggplot(df_individuals, aes(x = item_count, y = average_price)) +
     size = "Total Spending"
   ) +
   theme_minimal()
+
+
+```
+```{r}
+#| label: fig-user-spending
+#| fig-cap: "Total Spending and Number of Items Bought by Users"
+#| fig-pos: H
 
 # Step 3: Remove Outliers, users with ~600 and ~50 items offsetting all data points, removed for ease of understanding 
 df_individuals <- df_individuals %>%
